# medrec

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  build.sh  manage.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: auto-update-pre-commit.yaml  codeql.yaml  lint.yaml
app/: settings.py  urls.py
auth/: urls.py  views.py
auth/templates/auth/: login.html  register.html
clients/: admin.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_client_client_reference_number_idx.py
fixtures/: City.yaml  Client.yaml  District.yaml  Province.yaml  Record.yaml  User.yaml
medrec/: apps.py  urls.py  views.py
records/: admin.py  models.py
records/migrations/: 0001_initial.py  0002_rename_client_reference_number_record_client.py  0003_record_record_uuid_idx.py
regions/: admin.py  models.py  urls.py  views.py
regions/migrations/: 0001_initial.py  0002_city_city_code_idx_district_district_code_idx_and_more.py  0003_rename_province_code_city_province_and_more.py  0004_rename_region_code_city_region.py
scripts/: generate_all.py  generate_clients_fixture.py  generate_records_fixture.py  generate_regions_fixture.py  generate_users_fixture.py  loaddata_all.py  loaddata_clients.py  loaddata_records.py  loaddata_regions.py  loaddata_users.py
scripts/lib/: loaddata.py
theme/static/: .gitignore
theme/static_src/: .gitignore  package-lock.json  package.json  tailwind.config.js
theme/templates/: base.html  test_base.html
users/: admin.py  managers.py  models.py
users/migrations/: 0001_initial.py  0002_profile_alter_user_options_user_user_uuid_idx_and_more.py
(+23 files in other folders)
