[project]
name = "medrec"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "MJ Sabit (seyLu)", email = "98249191+seyLu@users.noreply.github.com" },
]
description = "Prototype for a Medical Record system."
readme = "README.md"
dynamic = ["version"]
keywords = ["prototype", "medrec", "medical record system"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/seyLu/medrec#readme"
"Homepage" = "https://github.com/seyLu/medrec"
"Bug Tracker" = "https://github.com/seyLu/medrec/issues"


[tool.ruff.lint]
select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "S",   # flake8-bandit
  "E",   # Pyflakes
  "F",   # Pycodestyle
  "I",   # Isort
  "PL",  # Pylint
  "RUF", # Ruff-specific rules
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = [
  "S311",
  "S603",
  "S607", # NOTE: revisit this rule once app is dockerized
]
"scripts/generate_clients_fixture.py" = ["PLR2004"]
"**/{models,admin}.py" = ["RUF012"]

[tool.ruff]
extend-exclude = ["migrations"]


[tool.mypy]
strict = "True"
implicit_reexport = "True"
check_untyped_defs = true
ignore_missing_imports = true

# Exclude type checking on files/dirs
exclude = [
  # TOML basic string (double-quotes, backslash and other characters need escaping)
  # TOML literal string (single-quotes, no escaping necessary)
]

plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "app.settings"
